mejoras estilos form

--- a/src/app/superheroes/pages/formulario/pages/formulario.component.scss
+++ b/src/app/superheroes/pages/formulario/pages/formulario.component.scss
@@ -1,8 +1,11 @@
 #selectorColor {
-  width: 350px;
   height: 350px;
 }
 
 .color-picker {
   width: 70px;
+}
+
+.form-group mat-form-field {
+  width: 100%;
 }
