--- a/src/app/theme/layout/admin/navigation/nav-logo/nav-logo.component.html
+++ b/src/app/theme/layout/admin/navigation/nav-logo/nav-logo.component.html
@@ -1,5 +1,5 @@
 <div>
-  <a [routerLink]="['/dashboard']" class="b-brand">
+  <a [routerLink]="['/tabla-listado']" class="b-brand">
     <div class="b-bg">
       <i class="fa fa-space-shuttle" aria-hidden="true"></i>
     </div>
