--- a/src/app/superheroes/layout/nav-bar/nav-bar.component.html
+++ b/src/app/superheroes/layout/nav-bar/nav-bar.component.html
@@ -11,7 +11,7 @@
       <div class="b-bg">
         <i class="feather icon-trending-up"></i>
       </div>
-      <span class="b-title">Datta Able</span>
+      <span class="b-title">Datta Abldcsdce</span>
     </a>
   </div>
   <a
@@ -22,7 +22,4 @@
     (click)="toggleMobOption()"
     ><i class="feather icon-more-horizontal"></i
   ></a>
-  <div class="collapse navbar-collapse" [style.display]="this.collapseStyle">
-    <app-nav-right class="ms-auto"></app-nav-right>
-  </div>
 </header>
