--- a/src/app/superheroes/pages/formulario/pages/formulario.component.html
+++ b/src/app/superheroes/pages/formulario/pages/formulario.component.html
@@ -4,52 +4,13 @@
     <form [formGroup]="formulario" (ngSubmit)="enviar()">
       <div class="row">
         <div class="col-md-6">
-            <div class="form-group">
-              <h6>Nombre del superhéroe</h6>
-              <mat-form-field>
-                <mat-label>Nombre</mat-label>
-                <input matInput placeholder="Nombre" formControlName="nombre" [readonly]="esEditar" oninput="this.value = this.value.toUpperCase()">
-                <mat-error *ngIf="formulario.get('nombre').hasError('required') && formulario.get('nombre').touched">El nombre es requerido</mat-error>
-                <mat-error *ngIf="formulario.get('nombre').hasError('maxlength') && formulario.get('nombre').touched">El nombre no puede tener más de 20 caracteres</mat-error>
-              </mat-form-field>
-            </div>
-            <div class="form-group">
-              <h6>Color de ojos</h6>
-              <mat-form-field>
-                <mat-select formControlName="colorOjos" placeholder="Selecciona un color">
-                  <mat-option *ngFor="let ojo of ojos" [value]="ojo.value">{{ojo.color}}</mat-option>
-                </mat-select>
-                <mat-error *ngIf="formulario.get('colorOjos').invalid && formulario.get('colorOjos').touched">Selecciona el color de ojos</mat-error>
-              </mat-form-field>
-            </div>
-            <div class="form-group">
-              <h6>Fecha de Nacimiento</h6>
-              <mat-form-field>
-                <input matInput [matDatepicker]="picker" formControlName="fechaNacimiento">
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
-                <mat-error *ngIf="formulario.get('fechaNacimiento').invalid && formulario.get('fechaNacimiento').touched">
-                  La fecha debe ser menor a la fecha de hoy
-                </mat-error>
-              </mat-form-field>
-            </div>
+            <app-superhero-input [control]="nombreControl('nombre')" [isEdit]="esEditar"></app-superhero-input>
+            <app-superhero-select [control]="nombreControl('colorOjos')" [valores]="ojos"></app-superhero-select>
+            <app-superhero-datepicker [control]="nombreControl('fechaNacimiento')"></app-superhero-datepicker>
         </div>
         <div class="col-md-6">
-          <div class="form-group">
-            <h6>Género</h6>
-            <mat-radio-group formControlName="genero" id="generoRadio">
-              <mat-radio-button value="M">Masculino</mat-radio-button>
-              <mat-radio-button value="F">Femenino</mat-radio-button>
-            </mat-radio-group>
-            <mat-error *ngIf="formulario.get('genero').invalid && formulario.get('genero').touched">Selecciona el género</mat-error>
-          </div>
-          <div class="form-group">
-            <h6>Superpoderes</h6>
-            <div>
-              <mat-checkbox *ngFor="let superpoder of superpoderes" (change)="onCheckboxChange($event, superpoder.value)" value="{{superpoder.value}}" [checked]="marcarSuperpoderesDefecto(superpoder.value)">{{superpoder.poder}}</mat-checkbox>
-            </div>
-            <mat-error *ngIf="formulario.get('superpoderes').invalid && formulario.get('superpoderes').touched">Selecciona al menos un superpoder</mat-error>
-          </div>
+          <app-superhero-radio [control]="nombreControl('genero')"></app-superhero-radio>
+          <app-superhero-checkbox [control]="nombreControl('superpoderes')" [valores]="superpoderes"></app-superhero-checkbox>
           <div class="form-group">
             <h6>Color del superhéroe</h6>
             <mat-form-field id="selectorColor">
