--- a/src/app/superheroes/pages/tabla-listado/pages/tabla-listado.component.html
+++ b/src/app/superheroes/pages/tabla-listado/pages/tabla-listado.component.html
@@ -54,7 +54,8 @@
         </table>
       </div>
       <div *ngIf="superHeroes.length && !superHeroesFiltrado.length"><strong>No existe ese superhéroe que cumpla ese filtro</strong></div>
-      <div *ngIf="!superHeroes.length"><strong>No existen superhéroes</strong></div>
+      <div *ngIf="!superHeroes.length && !error"><strong>No existen superhéroes</strong></div>
+      <div *ngIf="!superHeroes.length && error"><strong>¡¡¡Error llamando al servicio!!!</strong></div>
     </app-card>
   </div>
 </div>
