--- a/src/app/superheroes/pages/tabla-listado/pages/tabla-listado.component.html
+++ b/src/app/superheroes/pages/tabla-listado/pages/tabla-listado.component.html
@@ -2,9 +2,9 @@
   <div style="display: flex; flex-direction: column; align-items: center; margin-top: 50px;">
     <mat-progress-spinner
           class="example-margin"
-          [color]="color"
-          [mode]="mode"
-          [value]="value">
+          [color]="colorSpinner"
+          [mode]="modeSpinner"
+          [value]="valueSpinner">
     </mat-progress-spinner>
     <span style="margin-top: 20px; font-size: 1.2em;">Cargando datos...</span>
   </div>
